# libs

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: githubpages.yaml  pythonpackage.yml  pythonpublish.yml
_sources/: index.rst.txt
libs/: iterlib.py
libs/tests/: test_iolib_file.py  test_iterlib.py
source/: conf.py  index.rst
